--- a/css/styles.css
+++ b/css/styles.css
@@ -30,7 +30,25 @@
 
 }
 
+//hero
 
+.inline-photo{
+   box-shadow : 1em 1em 2em .25em rgba(0,0,0.2);
+   margin: 2em auto;
+   opacity: 0;
+   max-width: 600px;
+   width: 90%;
+   transform: translateY(4em) rotateZ(-5deg);
+   transition: transform 4s .25s cubic-bezier(0,1,.3,1) opacity .3s .25s ease-out;
+   will-change: transform, opacity;
+}
+
+.inline-photo.is-visible{
+    opacity:1;
+    transform: rotateZ(-2deg)
+}
+
+//
 .my-element{
     display: inline block;
     margin: 0 0.5rem;
@@ -97,3 +115,7 @@
 .scrolled.slide-right{
     animation: slide-in-right 1s ease-in-out both;
 }
+  
+html{
+    box-sizing:border-box;
+  }
