--- a/css/styles.css
+++ b/css/styles.css
@@ -10,6 +10,8 @@
     }
 }
 
+@import url('https://fonts.googleapis.com/css2?family=Glory:wght@100&display=swap');
+
 @media (min-width : 640px){
 
 }
@@ -30,25 +32,9 @@
 
 }
 
-//hero
-
-.inline-photo{
-   box-shadow : 1em 1em 2em .25em rgba(0,0,0.2);
-   margin: 2em auto;
-   opacity: 0;
-   max-width: 600px;
-   width: 90%;
-   transform: translateY(4em) rotateZ(-5deg);
-   transition: transform 4s .25s cubic-bezier(0,1,.3,1) opacity .3s .25s ease-out;
-   will-change: transform, opacity;
+.font-Glory{
+    font-family: Glory;
 }
-
-.inline-photo.is-visible{
-    opacity:1;
-    transform: rotateZ(-2deg)
-}
-
-//
 .my-element{
     display: inline block;
     margin: 0 0.5rem;
@@ -79,43 +65,27 @@
     --animate-duration:800ms;
     --animated-delay:2s;
 }
-.scroll-animations{
-    display :flex;
-}
-.scroll-animations div{
-    flex-grow:1;
-    padding: 30px;
-    text-align: center;
-    opacity: 0;
-    color : #333;
-}
-.scroll-animations div span{
-    font-size: 4em;
-    color : #5AA9E0;
-}
-.scroll-animations div h3{
-    font-size:1.9em;
-    font-weight: 400;
-    margin-bottom:10px;
-}
 
-//scroll https://webdesign.tutsplus.com/tutorials/animate-on-scroll-with-javascript--cms-36671
-.scrolled . fade-in{
-    animation: fade-in 1s ease-in-out both;
-}
-
-.scrolled.fade-in-bottom{
-    animation: fade-in-bottom 1s ease-in-out both;
-}
-
-.scrolled.slide-left{
-    animation: slide-in-left 1s ease-in-out both;
-}
-
-.scrolled.slide-right{
-    animation: slide-in-right 1s ease-in-out both;
-}
-  
 html{
     box-sizing:border-box;
+  }
+
+/* -----
+SVG Icons - svgicons.sparkk.fr
+----- */
+
+.svg-icon {
+    width: 1em;
+    height: 1em;
+  }
+  
+  .svg-icon path,
+  .svg-icon polygon,
+  .svg-icon rect {
+    fill: #4691f6;
+  }
+  
+  .svg-icon circle {
+    stroke: #4691f6;
+    stroke-width: 1;
   }
