--- a/css/styles.css
+++ b/css/styles.css
@@ -31,30 +31,36 @@
 
 html{
     box-sizing:border-box;
-  }
+}
 
 
 
-  h2{
+h2{
 	font-family: sans-serif;
 	font-weight: normal;
+}
+
+.img-produk{
+	height: 100%;
+	width: 100%;
+
 }
 .web-slider { 
 	border: 10px solid #efefef; 
 	position: relative; 
 	overflow: hidden; 
-	background: #efefef;
+	background: #fff;
 }
 
 .web-slider { 
 	margin:20px auto;
 	width: 730px;
-	height: 450px; 
+	max-height: 450px; 
 }
 
 .isi-slider img { 
 	width: 750px;
-	height: 450px; 
+	min-height: 450px; 
 	float: left;
 }
 
@@ -62,7 +68,6 @@ html{
 	position: absolute; 
 	width:3900px;  
 
-	/*pengaturan durasi lama tampil gambar bisa di atur di bawah ini*/
 	animation-name:slider;
 	animation-duration:10s;
 	animation-timing-function: ease-in-out;
@@ -82,7 +87,6 @@ html{
 }
 
 
-/*saat gambar di hover oleh cursor mouse maka berhenti slide*/
 .isi-slider:hover {
 	cursor: not-allowed; 
 	-webkit-animation-play-state:paused; 
@@ -108,6 +112,34 @@ html{
 
 .web-slider:hover:after { 
 	color: rgba(255,255,255, 0.6);  
+}
+
+@media only screen and (max-width: 768px){
+	.web-slider{
+		width: 100vw !important;
+		position: relative;
+		left: 50%;
+		margin-left: -50vw;
+	}
+	.isi-slider{
+		padding: 5px;
+		max-width: 100%;
+		height: 50%;
+	}
+}
+
+@media only screen and (max-width: 640px){
+	.web-slider{
+		width: 100vw !important;
+		position: relative;
+		left: 50%;
+		margin-left: -50vw;
+	}
+
+	.isi-slider{
+		padding: 5px;
+		max-width: 100%;
+	}
 }
 
 
