--- a/css/styles.css
+++ b/css/styles.css
@@ -40,27 +40,24 @@ h2{
 	font-weight: normal;
 }
 
-.img-produk{
-	height: 100%;
-	width: 100%;
 
 }
 .web-slider { 
 	border: 10px solid #efefef; 
 	position: relative; 
 	overflow: hidden; 
-	background: #fff;
+	background: #efefef;
 }
 
 .web-slider { 
 	margin:20px auto;
-	width: 730px;
-	max-height: 450px; 
+	width: 750px;
+	height: 450px; 
 }
 
 .isi-slider img { 
 	width: 750px;
-	min-height: 450px; 
+	height: 450px; 
 	float: left;
 }
 
@@ -68,6 +65,7 @@ h2{
 	position: absolute; 
 	width:3900px;  
 
+	/*pengaturan durasi lama tampil gambar bisa di atur di bawah ini*/
 	animation-name:slider;
 	animation-duration:10s;
 	animation-timing-function: ease-in-out;
@@ -87,6 +85,7 @@ h2{
 }
 
 
+/*saat gambar di hover oleh cursor mouse maka berhenti slide*/
 .isi-slider:hover {
 	cursor: not-allowed; 
 	-webkit-animation-play-state:paused; 
@@ -113,36 +112,6 @@ h2{
 .web-slider:hover:after { 
 	color: rgba(255,255,255, 0.6);  
 }
-
-@media only screen and (max-width: 768px){
-	.web-slider{
-		width: 100vw !important;
-		position: relative;
-		left: 50%;
-		margin-left: -50vw;
-	}
-	.isi-slider{
-		padding: 5px;
-		max-width: 100%;
-		height: 50%;
-	}
-}
-
-@media only screen and (max-width: 640px){
-	.web-slider{
-		width: 100vw !important;
-		position: relative;
-		left: 50%;
-		margin-left: -50vw;
-	}
-
-	.isi-slider{
-		padding: 5px;
-		max-width: 100%;
-	}
-}
-
-
 
 @-moz-keyframes slider {     
 	0% {
@@ -312,4 +281,188 @@ h2{
   display:grid;
   height:4em;
   place-items:center
+}
+/*Slider*/
+
+/* body{
+	font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande", "Lucida Sans", Arial, sans-serif;
+	width: 100%;
+	min-height: 45rem;
+	font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
+	text-align: center;
+	background color: whitesmoke;
+} */
+
+/* .container{
+	width: 100%;
+	padding-right: 15px;
+	padding-left:15px;
+	margin-right: auto;
+	margin-left: auto;
+	max-width: 800px;
+} */
+
+#proparallax{
+	display: block;
+	position: relative;
+	overflow: hidden;
+	min-height: 37.5rem;
+	border: 10px solid black;
+	box-shadow: 0px 8px 10px 8px grey;
+}
+
+#proparallax img{
+	position: absolute;
+	width: 50rem;
+	height: 37.5rem;
+	overflow: hidden;
+	object-fit: cover;
+}
+
+@keyframes proparallax_one{
+	0%{
+		height: 37.5rem;
+		width: 50rem;
+		left: 0rem;
+		opacity: 1;
+	}
+	27.77%{
+		width: 50rem;
+		left: 0rem;
+	}
+	27,78%{
+		width: 50rem;
+		left: 0rem;
+		right: 50rem;
+	}
+	33.33%{
+		height: 37.5rem;
+		width: 0rem;
+		left: 0rem;
+		right: 0rem;
+		opacity: 1;
+	}
+	33.34%{
+		opacity:0;
+	}
+	94.43%{
+		left: 0rem;
+		opacity: 0;
+	}
+	94.44%{
+		height: 37.5rem;
+		width: 0rem;
+		left: 50rem;
+		opacity: 1;
+	}
+	100%{
+		width: 50rem;
+		left: 0rem;
+		opacity: 1;
+	}
+}
+
+@keyframes proparallax_two{
+	0%{
+		opacity:0;
+	}
+	27.77%{
+		left:0rem;
+		opacity:0;
+	}
+	27.78%{
+		width:0rem;
+		height:37.5rem;
+		left:50rem;
+		opacity:1;
+	}
+	33.33%{
+		width: 50rem;
+		left: 0rem;
+	}
+	61.10%{
+		width: 50rem;
+		left:0rem;
+	}
+	61.11{
+		width:50rem;
+		left:0rem;
+		right:50rem;
+	}
+	66.67%{
+		width: 0rem;
+		right: 0rem;
+		left: 0rem;
+		height: 37.5rem;
+		opacity: 1;
+	}
+	66.68%{
+		opacity: 0;
+	}
+	100%{
+		opacity: 0;
+	}
+}
+
+@keyframes proparallax_theree{
+	0%{
+		opacity: 0;
+	}
+	61.10%{
+		opacity: 0;
+	}
+	61.11%{
+		width: 0rem;
+		height: 37.5rem;
+		left: 50rem;
+		opacity: 1;
+	}
+	66.67%{
+		width: 50rem;
+		left: 0rem;
+	}
+	94.43%{
+		width: 50rem;
+		oleft: 0rem;
+		right: 50rem;
+	}
+	94.44%{
+		width: 50rem;
+		left: 0rem;
+		right: 50rem;
+	}
+	100%{
+		width: 0rem;
+		right: 0rem;
+		left: 0rem;
+		height: 37.5rem;
+		opacity: 1;
+	}
+}
+
+#proparallax img.one{
+	animation-name: proparallax_one;
+	animation-timing-function: linear;
+	animation-iteration-count: infinite;
+	animation-duration: 18s;
+	animation-direction: forwards;
+	object-fit: cover;
+}
+
+#proparallax img.two{
+	animation-name: proparallax_two;
+	animation-timing-function: linear;
+	animation-iteration-count: infinite;
+	animation-duration: 18s;
+	animation-direction: forwards;
+	object-fit:cover;
+}
+
+#proparallax img.theree{
+	animation-name: proparallax_theree;
+	animation-timing-function: linear;
+	animation-iteration-count: infinite;
+	animation-duration: 18s;
+	animation-direction: forwards;
+	object-fit: cover;
 }
